--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce",
-  "homepage": "https://zaviyar-dev.github.io/ReactEcommerceApp",
+  "homepage": "https://zaviyar-dev.github.io/reactecommerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
